--- a/src/views/courses.ejs
+++ b/src/views/courses.ejs
@@ -1,7 +1,7 @@
 <main>
 
     <div class="container">
-        <h1 class="h2 text-blue-primary border-bottom mb-2 mt-2">Nossos Cursos</h1>
+        <h1 class="h2 text-blue-primary border-bottom mb-2 mt-2">Lançamentos</h1>
         <section class="courses">
             <article class="course">
                 <a class="overflow-hidden img-hover" href="/curso/reta-final-trt-noite-ao-vivo"><img src="/img/course1.png" alt=""></a>
@@ -36,6 +36,10 @@
                     <p class="pricing-boleto">Ganhe <strong>5% de desconto</strong> pagando no boleto à vista por <strong>R$ 652,84</strong></p>
                 </div>
             </article>
+        </section>
+
+        <h1 class="h2 text-blue-primary border-bottom mb-2 mt-2">Cursos OAB</h1>
+        <section class="courses">
             <article class="course">
                 <a class="overflow-hidden img-hover" href="/curso/reta-final-trt-noite-ao-vivo"><img src="/img/course1.png" alt=""></a>
                 <h1><a href="/curso/reta-final-trt-noite-ao-vivo">Reta Final TRT - Noite (Ao Vivo)</a></h1>
@@ -67,7 +71,81 @@
                     <p class="pricing-parcelas">em até 10x de R$ 68,72</p>
                     <p class="pricing-cartao">no cartão de crédito</p>
                     <p class="pricing-boleto">Ganhe <strong>5% de desconto</strong> pagando no boleto à vista por <strong>R$ 652,84</strong></p>
+                </div>
+            </article>
+        </section>
+
+        <h1 class="h2 text-blue-primary border-bottom mb-2 mt-2">Carreiras Policiais</h1>
+        <section class="courses">
+            <article class="course">
+                <a class="overflow-hidden img-hover" href="/curso/reta-final-trt-noite-ao-vivo"><img src="/img/course1.png" alt=""></a>
+                <h1><a href="/curso/reta-final-trt-noite-ao-vivo">Reta Final TRT - Noite (Ao Vivo)</a></h1>
+                <div class="pricing">
+                    <p class="pricing-de">de R$ 859,00</p>
+                    <p class="pricing-por">Por <span>R$ 687,20</span></p>
+                    <p class="pricing-parcelas">em até 10x de R$ 68,72</p>
+                    <p class="pricing-cartao">no cartão de crédito</p>
+                    <p class="pricing-boleto">Ganhe <strong>5% de desconto</strong> pagando no boleto à vista por <strong>R$ 652,84</strong></p>
+                </div>                    
+            </article>
+            <article class="course">
+                <a class="overflow-hidden img-hover" href="/curso/reta-final-trt-noite-ao-vivo"><img src="/img/course2.png" alt=""></a>
+                <h1><a href="/curso/reta-final-trt-noite-ao-vivo">Mega Revisão de Véspera TJ/PI (Analista Judiciário) - Presencial</a></h1>
+                <div class="pricing">
+                    <p class="pricing-de">de R$ 859,00</p>
+                    <p class="pricing-por">Por <span>R$ 687,20</span></p>
+                    <p class="pricing-parcelas">em até 10x de R$ 68,72</p>
+                    <p class="pricing-cartao">no cartão de crédito</p>
+                    <p class="pricing-boleto">Ganhe <strong>5% de desconto</strong> pagando no boleto à vista por <strong>R$ 652,84</strong></p>
                 </div> 
+            </article>
+            <article class="course">
+                <a class="overflow-hidden img-hover" href="/curso/reta-final-trt-noite-ao-vivo"><img src="/img/course3.png" alt=""></a>
+                <h1><a href="/curso/reta-final-trt-noite-ao-vivo">1ª Fase OAB XXXVI - Noite (Ao Vivo)</a></h1>
+                <div class="pricing">
+                    <p class="pricing-de">de R$ 859,00</p>
+                    <p class="pricing-por">Por <span>R$ 687,20</span></p>
+                    <p class="pricing-parcelas">em até 10x de R$ 68,72</p>
+                    <p class="pricing-cartao">no cartão de crédito</p>
+                    <p class="pricing-boleto">Ganhe <strong>5% de desconto</strong> pagando no boleto à vista por <strong>R$ 652,84</strong></p>
+                </div>
+            </article>
+        </section>
+
+        <h1 class="h2 text-blue-primary border-bottom mb-2 mt-2">Tribunais</h1>
+        <section class="courses">
+            <article class="course">
+                <a class="overflow-hidden img-hover" href="/curso/reta-final-trt-noite-ao-vivo"><img src="/img/course1.png" alt=""></a>
+                <h1><a href="/curso/reta-final-trt-noite-ao-vivo">Reta Final TRT - Noite (Ao Vivo)</a></h1>
+                <div class="pricing">
+                    <p class="pricing-de">de R$ 859,00</p>
+                    <p class="pricing-por">Por <span>R$ 687,20</span></p>
+                    <p class="pricing-parcelas">em até 10x de R$ 68,72</p>
+                    <p class="pricing-cartao">no cartão de crédito</p>
+                    <p class="pricing-boleto">Ganhe <strong>5% de desconto</strong> pagando no boleto à vista por <strong>R$ 652,84</strong></p>
+                </div>                    
+            </article>
+            <article class="course">
+                <a class="overflow-hidden img-hover" href="/curso/reta-final-trt-noite-ao-vivo"><img src="/img/course2.png" alt=""></a>
+                <h1><a href="/curso/reta-final-trt-noite-ao-vivo">Mega Revisão de Véspera TJ/PI (Analista Judiciário) - Presencial</a></h1>
+                <div class="pricing">
+                    <p class="pricing-de">de R$ 859,00</p>
+                    <p class="pricing-por">Por <span>R$ 687,20</span></p>
+                    <p class="pricing-parcelas">em até 10x de R$ 68,72</p>
+                    <p class="pricing-cartao">no cartão de crédito</p>
+                    <p class="pricing-boleto">Ganhe <strong>5% de desconto</strong> pagando no boleto à vista por <strong>R$ 652,84</strong></p>
+                </div> 
+            </article>
+            <article class="course">
+                <a class="overflow-hidden img-hover" href="/curso/reta-final-trt-noite-ao-vivo"><img src="/img/course3.png" alt=""></a>
+                <h1><a href="/curso/reta-final-trt-noite-ao-vivo">1ª Fase OAB XXXVI - Noite (Ao Vivo)</a></h1>
+                <div class="pricing">
+                    <p class="pricing-de">de R$ 859,00</p>
+                    <p class="pricing-por">Por <span>R$ 687,20</span></p>
+                    <p class="pricing-parcelas">em até 10x de R$ 68,72</p>
+                    <p class="pricing-cartao">no cartão de crédito</p>
+                    <p class="pricing-boleto">Ganhe <strong>5% de desconto</strong> pagando no boleto à vista por <strong>R$ 652,84</strong></p>
+                </div>
             </article>
         </section>
     </div>
