--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -2,17 +2,22 @@
 
     <main>
         <div class="container">
+            <h1 class="h1 fw-bold text-blue-primary text-center pt-2">Cadastro</h1>
             <form>
                 <div class="row">
-                    <div class="col-12 col-lg-8">
-                        <div class="border br-1 px-2 pt-2 my-2">
+                    <div class="col-12">
+                        <div class="border br-1 p-2 my-2">
                             <div class="row">
                                 <div class="col-12">
-                                    <h2 class="h4 text-blue-primary border-bottom mb-2">Informações sobre o aluno</h2>
+                                    <h2 class="h4 text-blue-primary border-bottom mb-2">Informações do aluno</h2>
                                 </div>
                                 <div class="col-12 col-md-12">
                                     <label class="form-label" for="name">Nome Completo:</label>
                                     <input class="form-control" type="text" name="name" id="name" placeholder="Informe seu nome completo">
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <label class="form-label" for="email">CPF:</label>
+                                    <input class="form-control" type="text" name="email" id="email" placeholder="___.___.___-__">
                                 </div>
                                 <div class="col-12 col-md-6">
                                     <label class="form-label" for="email">E-Mail:</label>
@@ -57,35 +62,15 @@
                                     <label class="form-label" for="estado">Estado:</label>
                                     <input class="form-control" type="text" name="estado" id="estado" placeholder="Insira seu estado">
                                 </div>
+                                <div class="col-12">
+                                    <button class="btn-success" type="submit">Cadastrar</button>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <div class="border br-1 p-2 my-2">
-                            <h2 class="text-gray-primary">Resumo da Compra</h2>
-                            <p class="fs-small text-gray-primary my-1"><strong class="fw-bold">Curso:</strong> Curso OAB 2ª Fase Penal 35º Exame</p>
-                            <div class="d-flex justify-content-between">
-                                <p class="fs-small fw-bold text-gray-primary">Valor do curso:</p>
-                                <p class="fs-small text-gray-primary">R$ 999,00</p>
-                            </div>
-                            <div class="d-flex justify-content-between">
-                                <p class="fs-small fw-bold text-gray-primary text-red">Desconto (promoção):</p>
-                                <p class="fs-small text-gray-primary text-red">-R$ 299,70</p>
-                            </div>
-                            <div class="d-flex justify-content-between">
-                                <p class="fs-small fw-bold text-gray-primary text-success">Total:</p>
-                                <p class="fs-small text-gray-primary text-success">R$ 699,30</p>
-                            </div>
-                            <input class="form-control my-1" type="text" name="coupon" id="coupon" placeholder="Tem cupom de desconto?">
-                            <button class="btn-blue">Validar Cupom</button>
-                        </div>
-                        <button class="btn-success" type="submit">Cadastrar</button>
                     </div>
                 </div>
             </form>
         </div>
     </main>
-
-    <%- include('testimonials'); %>
 
 <%- include('footer'); %>
