--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -6,10 +6,11 @@
             <div class="row">
                 <div class="col-12 col-md-6 d-flex flex-column align-items-center py-2 py-md-6">
                     <img class="img-80 mb-2" src="/svg/login-img.svg" alt="">
-                    <h1 class="h2 text-center text-gray-primary w-75">Faça seu login para ter acesso a todos os recursos do seu curso.</h1>
+                    <!-- <h1 class="h2 text-center text-gray-primary w-75">Faça seu login para ter acesso a todos os recursos do seu curso.</h1> -->
                 </div>
                 <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
                     <form class="login-form mb-2">
+                        <h1 class="h2 text-center text-gray-primary mb-2">Faça seu login para ter acesso a todos os recursos do seu curso.</h1>
                         <label class="text-gray-primary" for="lf-mail">E-Mail</label>
                         <input type="text" name="email" placeholder="Insira seu E-Mail" id="lf-mail">
                         <label class="text-gray-primary" for="lf-pass">Senha</label>
@@ -23,7 +24,5 @@
         </div>
 
     </main>
-
-    <%- include('testimonials'); %>
 
 <%- include('footer'); %>
