--- a/src/views/course-page.ejs
+++ b/src/views/course-page.ejs
@@ -17,6 +17,16 @@
         </div>
 
         <div class="container">
+            <h2 class="h3 text-center my-2 text-blue-primary">Informações do Curso</h2>
+            <div class="row">
+                <div class="col-12">
+                    <p class="my-1 text-center">Turma regular com transmissão online ao vivo!</p>
+                    <p class="my-1 text-center">Preparação pré-edital - A mais completa preparação para o exame da ordem!</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
             <h2 class="h3 text-center my-2 text-blue-primary">Vantagens do Curso</h2>
             <div class="row">
                 <div class="col-12 col-sm-6">
@@ -71,38 +81,77 @@
         </div>
 
         <div class="container">
-            <h2 class="h3 text-center my-2 text-blue-primary">Disponibilização Das Aulas</h2>
-            <div class="row">
-                <div class="col-12 col-md-6">
-                    <img class="img-fluid br-1" src="/img/course3.png" alt="">
+            <h2 class="h3 text-center my-2 text-blue-primary">Professores</h2>
+            <div class="profs">
+                <div class="prof">
+                    <img src="https://html-ceisc.s3-sa-east-1.amazonaws.com/site/public/depoimentos/thiago_goncalves.png" alt="">
+                    <p class="fw-bold text-blue-primary mt-2">Prof. Fulano</p>
+                    <p>Direito Penal</p>
                 </div>
-                <div class="col-12 col-md-6">
-                    <p class="my-1">O próximo concurso para Técnico do Seguro Social do INSS está com edital prestes a ser lançado, então não perca mais tempo, e comece já sua preparação para buscar uma das mil vagas com a gente!</p>
-                    <p class="my-1">Pensando em você, o Ceisc reuniu os melhores professores para ministrarem os conteúdos que foram cobrados no último edital, e você terá acesso a aulas de UPGRADE assim que o novo edital for publicado.</p>
-                    <p class="my-1">As aulas ficarão disponíveis até a data da prova que ainda será marcada.</p>
+                <div class="prof">
+                    <img src="https://html-ceisc.s3-sa-east-1.amazonaws.com/site/public/depoimentos/thiago_goncalves.png" alt="">
+                    <p class="fw-bold text-blue-primary mt-2">Prof. Fulano</p>
+                    <p>Direito Civil</p>
+                </div>
+                <div class="prof">
+                    <img src="https://html-ceisc.s3-sa-east-1.amazonaws.com/site/public/depoimentos/thiago_goncalves.png" alt="">
+                    <p class="fw-bold text-blue-primary mt-2">Prof. Fulano</p>
+                    <p>Direito Trabalho</p>
                 </div>
             </div>
         </div>
 
         <div class="container">
-            <h2 class="h3 text-center my-2 text-blue-primary">Professores</h2>
-            <div class="profs">
-                <div class="prof">
-                    <img src="https://html-ceisc.s3-sa-east-1.amazonaws.com/site/public/depoimentos/thiago_goncalves.png" alt="">
-                    <p>Prof. Fulano</p>
-                </div>
-                <div class="prof">
-                    <img src="https://html-ceisc.s3-sa-east-1.amazonaws.com/site/public/depoimentos/thiago_goncalves.png" alt="">
-                    <p>Prof. Fulano</p>
-                </div>
-                <div class="prof">
-                    <img src="https://html-ceisc.s3-sa-east-1.amazonaws.com/site/public/depoimentos/thiago_goncalves.png" alt="">
-                    <p>Prof. Fulano</p>
+            <h2 class="h3 text-center my-2 text-blue-primary">Disponibilização Das Aulas</h2>
+            <div class="row">
+                <div class="col-12">
+                    <p class="my-1 text-center">O próximo concurso para Técnico do Seguro Social do INSS está com edital prestes a ser lançado, então não perca mais tempo, e comece já sua preparação para buscar uma das mil vagas com a gente!</p>
+                    <p class="my-1 text-center">Pensando em você, o Ceisc reuniu os melhores professores para ministrarem os conteúdos que foram cobrados no último edital, e você terá acesso a aulas de UPGRADE assim que o novo edital for publicado.</p>
+                    <p class="my-1 text-center">As aulas ficarão disponíveis até a data da prova que ainda será marcada.</p>
                 </div>
             </div>
         </div>
 
-        <section class="bg-blue-primary py-3 mt-2">
+        <div class="container mb-2">
+            <h2 class="h3 text-center my-2 text-blue-primary">Módulos</h2>
+            <div class="row">
+                <div class="col-6"><div class="module">Trabalho - OAB 36º Exame Tarde</div></div>
+                <div class="col-6"><div class="module">Material Direito do Trabalho</div></div>
+                <div class="col-6"><div class="module">Penal - OAB 36º Exame Tarde</div></div>
+                <div class="col-6"><div class="module">Ética - OAB 36º Exame Tarde</div></div>
+                <div class="col-6"><div class="module">Constitucional - OAB 36º Exame Tarde</div></div>
+                <div class="col-6"><div class="module">Administrativo - OAB 36º Exame Tarde</div></div>
+                <div class="col-6"><div class="module">Civil - OAB 36º Exame Tarde</div></div>
+                <div class="col-6"><div class="module">Processo Penal - OAB 36º Exame Tarde</div></div>
+                <div class="col-6"><div class="module">Tributário - OAB 36º Exame Tarde</div></div>
+                <div class="col-6"><div class="module">Material Tributário</div></div>
+                <div class="col-6"><div class="module">Processo do Trabalho - OAB 36º Exame Tarde</div></div>
+                <div class="col-6"><div class="module">ECA- OAB 36º Exame Tarde</div></div>
+                <div class="col-6"><div class="module">Empresarial - OAB 36º Exame Tarde</div></div>
+                <div class="col-6"><div class="module">Consumidor - OAB 36º Exame Tarde</div></div>
+                <div class="col-6"><div class="module">Internacional - OAB 36º Exame Tarde</div></div>
+                <div class="col-6"><div class="module">Caderno de Treino</div></div>
+                <div class="col-6"><div class="module">Apostila</div></div>
+                <div class="col-6"><div class="module">Cronograma de Aulas</div></div>
+            </div>
+        </div>
+
+        <div class="course-banner">
+            <img src="/img/banner-course.png" alt="">
+            <div class="position-absolute top-0 left-0 right-0 bottom-0">
+                <div class="container h-100 d-flex flex-column justify-content-center gap-3 align-items-start">
+                    <h1 class="text-white h1 fw-bold">1ª Fase OAB XXXVI - Noite (Ao Vivo)</h1>
+                    <div>
+                        <p class="text-white">de R$859,00 por R$687,20</p>
+                        <h1 class="text-yellow-primary h1 fw-bold">10x de R$68,72</h1>
+                    </div>
+                    <p class="text-white fs-small">Ganhe 5% de desconto pagando no boleto à vista ou por PIX (R$652,84)</p>
+                    <button class="checkout-btn">Comprar este curso</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- <section class="bg-blue-primary py-3 mt-2">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6">
@@ -116,9 +165,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
-
-    <%- include('testimonials'); %>
 
 <%- include('footer'); %>
