--- a/src/views/course-page.ejs
+++ b/src/views/course-page.ejs
@@ -115,24 +115,24 @@
         <div class="container mb-2">
             <h2 class="h3 text-center my-2 text-blue-primary">Módulos</h2>
             <div class="row">
-                <div class="col-6"><div class="module">Trabalho - OAB 36º Exame Tarde</div></div>
-                <div class="col-6"><div class="module">Material Direito do Trabalho</div></div>
-                <div class="col-6"><div class="module">Penal - OAB 36º Exame Tarde</div></div>
-                <div class="col-6"><div class="module">Ética - OAB 36º Exame Tarde</div></div>
-                <div class="col-6"><div class="module">Constitucional - OAB 36º Exame Tarde</div></div>
-                <div class="col-6"><div class="module">Administrativo - OAB 36º Exame Tarde</div></div>
-                <div class="col-6"><div class="module">Civil - OAB 36º Exame Tarde</div></div>
-                <div class="col-6"><div class="module">Processo Penal - OAB 36º Exame Tarde</div></div>
-                <div class="col-6"><div class="module">Tributário - OAB 36º Exame Tarde</div></div>
-                <div class="col-6"><div class="module">Material Tributário</div></div>
-                <div class="col-6"><div class="module">Processo do Trabalho - OAB 36º Exame Tarde</div></div>
-                <div class="col-6"><div class="module">ECA- OAB 36º Exame Tarde</div></div>
-                <div class="col-6"><div class="module">Empresarial - OAB 36º Exame Tarde</div></div>
-                <div class="col-6"><div class="module">Consumidor - OAB 36º Exame Tarde</div></div>
-                <div class="col-6"><div class="module">Internacional - OAB 36º Exame Tarde</div></div>
-                <div class="col-6"><div class="module">Caderno de Treino</div></div>
-                <div class="col-6"><div class="module">Apostila</div></div>
-                <div class="col-6"><div class="module">Cronograma de Aulas</div></div>
+                <div class="col-12 col-md-6"><div class="module">Trabalho - OAB 36º Exame Tarde</div></div>
+                <div class="col-12 col-md-6"><div class="module">Material Direito do Trabalho</div></div>
+                <div class="col-12 col-md-6"><div class="module">Penal - OAB 36º Exame Tarde</div></div>
+                <div class="col-12 col-md-6"><div class="module">Ética - OAB 36º Exame Tarde</div></div>
+                <div class="col-12 col-md-6"><div class="module">Constitucional - OAB 36º Exame Tarde</div></div>
+                <div class="col-12 col-md-6"><div class="module">Administrativo - OAB 36º Exame Tarde</div></div>
+                <div class="col-12 col-md-6"><div class="module">Civil - OAB 36º Exame Tarde</div></div>
+                <div class="col-12 col-md-6"><div class="module">Processo Penal - OAB 36º Exame Tarde</div></div>
+                <div class="col-12 col-md-6"><div class="module">Tributário - OAB 36º Exame Tarde</div></div>
+                <div class="col-12 col-md-6"><div class="module">Material Tributário</div></div>
+                <div class="col-12 col-md-6"><div class="module">Processo do Trabalho - OAB 36º Exame Tarde</div></div>
+                <div class="col-12 col-md-6"><div class="module">ECA- OAB 36º Exame Tarde</div></div>
+                <div class="col-12 col-md-6"><div class="module">Empresarial - OAB 36º Exame Tarde</div></div>
+                <div class="col-12 col-md-6"><div class="module">Consumidor - OAB 36º Exame Tarde</div></div>
+                <div class="col-12 col-md-6"><div class="module">Internacional - OAB 36º Exame Tarde</div></div>
+                <div class="col-12 col-md-6"><div class="module">Caderno de Treino</div></div>
+                <div class="col-12 col-md-6"><div class="module">Apostila</div></div>
+                <div class="col-12 col-md-6"><div class="module">Cronograma de Aulas</div></div>
             </div>
         </div>
 
