--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -35,7 +35,7 @@
                     <li><a class="text-decoration-none text-white" href="/cursos">Cursos</a></li>
                 </ul>
                 
-                <a class="position-absolute left-50 translate-middle-x top-layer" href="/"><img class="brand" src="/img/logo-bottom.png" alt=""></a>
+                <a class="position-absolute left-50 translate-middle-x top-layer logo-container" href="/"><img class="brand" src="/img/logo-bottom-teste.png" alt=""></a>
 
                 <form class="search-form">
                     <input type="text" name="search" id="">
