--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -84,6 +84,8 @@ body { background-image: url(../img/ag-square.png); }
 .d-flex.justify-content-end { justify-content: flex-end; }
 .d-flex.flex-column { flex-direction: column; }
 
+.desktop { display: none; }
+
 footer { background-color: #fbfbfb; padding: 3rem 0; }
 footer a { text-decoration: none; color: var(--color-gray-primary); }
 footer a:hover { font-weight: bold; }
@@ -217,7 +219,7 @@ footer p, footer a { font-size: .75rem; }
 .w-75 { width: 75%; }
 .w-100 { width: 100%; }
 
-.whats-link { position: fixed; box-shadow: 0 .125rem .25rem rgba(0,0,0,.075); background-color: #fff; bottom: 1.5rem; right: 1.5rem; display: flex; border: 1px solid var(--color-green-primary); border-radius: 50rem; padding: 1rem; }
+.whats-link { position: fixed; box-shadow: 0 .125rem .25rem rgba(0,0,0,.075); background-color: #fff; bottom: 1.5rem; right: 1.5rem; display: flex; gap: .5rem; align-items: center; text-decoration: none; color: var(--color-green-primary); border: 1px solid var(--color-green-primary); border-radius: 50rem; padding: 1rem; }
 .whats-link img { height: 2rem; }
 
 /* Small devices (landscape phones, 576px and up) */
@@ -268,6 +270,7 @@ footer p, footer a { font-size: .75rem; }
     .course-banner { position: relative; width: 100%; aspect-ratio: 1920/600; }
 
     .courses .course { display: flex; flex-direction: column; flex: 0 0 auto; width: 33.33333%; box-sizing: border-box; padding: 0 1rem; margin-bottom: 2rem; }
+    .desktop { display: block; }
     .testimonials .testimonial { flex: 0 0 auto; width: 33.3333%; padding: 0 1rem; box-sizing: border-box; transform: translateX(-100%); transition: transform .75s; }
 }
 
