--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -38,7 +38,7 @@
                 <a class="position-absolute left-50 translate-middle-x top-layer logo-container" href="/"><img class="brand" src="/img/logo-bottom-teste.png" alt=""></a>
 
                 <form class="search-form">
-                    <input type="text" name="search" id="">
+                    <input type="text" name="search" placeholder="Procure seu curso">
                     <button>Pesquisar</button>
                 </form>
             </div>
