--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -177,6 +177,10 @@ footer p, footer a { font-size: .75rem; }
 .search-form input { background: none; border: none; outline: none; color: white; }
 .search-form button { text-indent: -99999px; aspect-ratio: 1/1; width: 1rem; background: none; border: none; background-image: url(../svg/search.svg); background-repeat: no-repeat; background-size: contain; cursor: pointer; }
 
+.search-form input::placeholder { color: #fff; opacity: 1; }
+.search-form input:-ms-input-placeholder { color: #fff; }
+.search-form input::-ms-input-placeholder { color: #fff; }
+
 .slide { position: relative; }
 .slide .slide-buttons { position: absolute; bottom: 5%; left: 50%; transform: translateX(-50%); display: flex; align-items: center; gap: 1rem; }
 .slide .slide-buttons .slide-control { height: 0.75rem; width: 0.75rem; padding: 0; margin: 0; border-radius: 50rem; border: none; background-color: #ccc; cursor: pointer; }
