--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -143,6 +143,14 @@ footer p, footer a { font-size: .75rem; }
 .my-1 { margin: 1rem 0; }
 .my-2 { margin: 2rem 0; }
 
+.mobile-menu { transition: 0.75s transform; transform: translateX(-110%); box-shadow: 0 .125rem .25rem rgba(0,0,0,.075); box-sizing: border-box; padding-top: 3rem; position: fixed; top: 0; bottom: 0; left: 0; background-color: #fff; z-index: 9999999999999; width: 75%; max-width: 300px; }
+.mobile-menu.open { transform: translateX(0); }
+.mobile-menu ul { display: flex; flex-direction: column; }
+.mobile-menu ul li { display: flex; }
+.mobile-menu ul li a { width: 100%; display: block; text-decoration: none; color: var(--color-blue-primary); padding: 0.5rem 2rem; box-sizing: border-box; border-bottom: 1px solid #eee; }
+.mobile-menu-btn { display: block; background: none; border: none; background-image: url(../svg/menu.svg); background-repeat: no-repeat; background-size: contain; text-indent: -99999px; width: 2rem; height: 2rem; }
+.mobile-menu-btn-close { position: absolute; top: 1rem; right: 1rem; background: none; border: none; background-image: url(../svg/close.svg); background-repeat: no-repeat; background-size: contain; text-indent: -99999px; width: 1rem; height: 1rem; }
+
 .module { padding: 1rem; border: 1px solid #ccc; margin: 0.5rem; border-radius: 1rem; }
 
 .notice h1 a { text-decoration: none; color: var(--color-blue-primary); }
@@ -256,6 +264,8 @@ footer p, footer a { font-size: .75rem; }
     .search-form { display: block; border: 1px solid #fff; padding: .25rem 1rem; border-radius: 50rem; }
     .main-nav ul { display: flex; }
 
+    .mobile-menu-btn { display: none; }
+
     .py-md-6 { padding: 8rem 0; }
     .h-50 { height: 50%; }
 }
@@ -274,6 +284,7 @@ footer p, footer a { font-size: .75rem; }
     .course-banner { position: relative; width: 100%; aspect-ratio: 1920/600; }
 
     .courses .course { display: flex; flex-direction: column; flex: 0 0 auto; width: 33.33333%; box-sizing: border-box; padding: 0 1rem; margin-bottom: 2rem; }
+    
     .desktop { display: block; }
     .testimonials .testimonial { flex: 0 0 auto; width: 33.3333%; padding: 0 1rem; box-sizing: border-box; transform: translateX(-100%); transition: transform .75s; }
 }
