--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -29,6 +29,9 @@
 
         <nav class="main-nav bg-blue-primary d-flex align-items-center">
             <div class="container d-flex justify-content-between align-items-center position-relative">
+
+                <button class="mobile-menu-btn">Menu</button>
+
                 <ul class="d-flex gap-2">
                     <li><a class="text-decoration-none text-white" href="/">Início</a></li>
                     <li><a class="text-decoration-none text-white" href="/sobre">Sobre</a></li>
@@ -42,6 +45,15 @@
                     <button>Pesquisar</button>
                 </form>
             </div>
+        </nav>
+
+        <nav class="mobile-menu">
+            <button class="mobile-menu-btn-close">Fechar</button>
+            <ul>
+                <li><a href="/">Início</a></li>
+                <li><a href="/sobre">Sobre</a></li>
+                <li><a href="/cursos">Cursos</a></li>
+            </ul>
         </nav>
 
     </header>
