--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -285,6 +285,9 @@ footer p, footer a { font-size: .75rem; }
 
     .courses .course { display: flex; flex-direction: column; flex: 0 0 auto; width: 33.33333%; box-sizing: border-box; padding: 0 1rem; margin-bottom: 2rem; }
     
+    .mr-lg-50 { margin-right: 50%; }
+    .ml-lg-50 { margin-left: 50%; }
+
     .desktop { display: block; }
     .testimonials .testimonial { flex: 0 0 auto; width: 33.3333%; padding: 0 1rem; box-sizing: border-box; transform: translateX(-100%); transition: transform .75s; }
 }
