--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -266,6 +266,13 @@ footer p, footer a { font-size: .75rem; }
 
     .mobile-menu-btn { display: none; }
 
+    .h1-md { font-size: 2.5rem; margin-top: 0; margin-bottom: 0.5rem; font-weight: 500; line-height: 1.2; }
+    .h2-md { font-size: 2rem; margin-top: 0; margin-bottom: 0.5rem; font-weight: 500; line-height: 1.2; }
+    .h3-md { font-size: 1.75rem; margin-top: 0; margin-bottom: 0.5rem; font-weight: 500; line-height: 1.2; }
+    .h4-md { font-size: 1.5rem; margin-top: 0; margin-bottom: 0.5rem; font-weight: 500; line-height: 1.2; }
+    .h5-md { font-size: 1.25rem; margin-top: 0; margin-bottom: 0.5rem; font-weight: 500; line-height: 1.2; }
+    .h6-md { font-size: 1rem; margin-top: 0; margin-bottom: 0.5rem; font-weight: 500; line-height: 1.2; }
+
     .py-md-6 { padding: 8rem 0; }
     .h-50 { height: 50%; }
 }
