--- a/src/views/course-page.ejs
+++ b/src/views/course-page.ejs
@@ -5,7 +5,7 @@
             <img src="/img/banner-course.png" alt="">
             <div class="position-absolute top-0 left-0 right-0 bottom-0">
                 <div class="container h-100 d-flex flex-column justify-content-center gap-3 align-items-start">
-                    <h1 class="text-white h1 fw-bold">1ª Fase OAB XXXVI - Noite (Ao Vivo)</h1>
+                    <h1 class="text-white h4 h2-md fw-bold">1ª Fase OAB XXXVI - Noite (Ao Vivo)</h1>
                     <div>
                         <p class="text-white">de R$859,00 por R$687,20</p>
                         <h1 class="text-yellow-primary h1 fw-bold">10x de R$68,72</h1>
@@ -140,7 +140,7 @@
             <img src="/img/banner-course.png" alt="">
             <div class="position-absolute top-0 left-0 right-0 bottom-0">
                 <div class="container h-100 d-flex flex-column justify-content-center gap-3 align-items-start">
-                    <h1 class="text-white h1 fw-bold">1ª Fase OAB XXXVI - Noite (Ao Vivo)</h1>
+                    <h1 class="text-white h4 h2-md fw-bold">1ª Fase OAB XXXVI - Noite (Ao Vivo)</h1>
                     <div>
                         <p class="text-white">de R$859,00 por R$687,20</p>
                         <h1 class="text-yellow-primary h1 fw-bold">10x de R$68,72</h1>
