--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -52,7 +52,7 @@ body { background-image: url(../img/ag-square.png); }
 
 .container { width: 100%; padding: 0 1rem; max-width: calc(1200px + 2rem); box-sizing: border-box; margin: 0 auto; }
 
-.course-banner { position: relative; width: 100%; height: 50vh; }
+.course-banner { position: relative; width: 100%; height: 50vh; min-height: 300px; }
 .course-banner .checkout-btn { margin-top: 1rem; cursor: pointer; padding: 1.25rem 2rem; background: none; color: #fff; border: 1px solid #fff; border-radius: 1rem; transition: all .25s; }
 .course-banner .checkout-btn:hover { border: 1px solid #09A599; transform: scale(1.1); color: var(--color-green-primary); }
 .course-banner img { width: 100%; height: 100%; object-fit: cover; display: block; }
@@ -143,7 +143,7 @@ footer p, footer a { font-size: .75rem; }
 .my-1 { margin: 1rem 0; }
 .my-2 { margin: 2rem 0; }
 
-.mobile-menu { transition: 0.75s transform; transform: translateX(-110%); box-shadow: 0 .125rem .25rem rgba(0,0,0,.075); box-sizing: border-box; padding-top: 3rem; position: fixed; top: 0; bottom: 0; left: 0; background-color: #fff; z-index: 9999999999999; width: 75%; max-width: 300px; }
+.mobile-menu { transition: 0.75s transform, 0.75s opacity; transform: translateX(-110%); box-shadow: 0 .125rem .25rem rgba(0,0,0,.075); box-sizing: border-box; padding-top: 3rem; position: fixed; top: 0; bottom: 0; left: 0; background-color: #fff; z-index: 9999999999999; width: 75%; max-width: 300px; }
 .mobile-menu.open { transform: translateX(0); }
 .mobile-menu ul { display: flex; flex-direction: column; }
 .mobile-menu ul li { display: flex; }
