--- a/src/views/course-page.ejs
+++ b/src/views/course-page.ejs
@@ -31,49 +31,49 @@
             <div class="row">
                 <div class="col-12 col-sm-6">
                     <div class="d-flex my-1">
-                        <img class="info-icon" src="/img/book.png" alt="">
+                        <img class="info-icon" src="/img/video-files.png" alt="">
                         <p class="d-flex align-items-center">Aulas com transmissão online ao vivo e todas as aulas ficam gravadas para assistir quantas vezes quiser.</p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6">
                     <div class="d-flex my-1">
-                        <img class="info-icon" src="/img/book.png" alt="">
+                        <img class="info-icon" src="/img/201153.png" alt="">
                         <p class="d-flex align-items-center">Apostila de questões em PDF na plataforma do aluno.</p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6">
                     <div class="d-flex my-1">
-                        <img class="info-icon" src="/img/book.png" alt="">
+                        <img class="info-icon" src="/img/4008657.png" alt="">
                         <p class="d-flex align-items-center">Caderno de treino com 12 simulados disponível na plataforma do aluno.</p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6">
                     <div class="d-flex my-1">
-                        <img class="info-icon" src="/img/book.png" alt="">
+                        <img class="info-icon" src="/img/201153.png" alt="">
                         <p class="d-flex align-items-center">Material teórico de apoio em PDF disponível na plataforma do aluno.</p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6">
                     <div class="d-flex my-1">
-                        <img class="info-icon" src="/img/book.png" alt="">
+                        <img class="info-icon" src="/img/895984.png" alt="">
                         <p class="d-flex align-items-center">04 simulados com avaliação de desempenho.</p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6">
                     <div class="d-flex my-1">
-                        <img class="info-icon" src="/img/book.png" alt="">
+                        <img class="info-icon" src="/img/3655399.png" alt="">
                         <p class="d-flex align-items-center">A melhor equipe de professores. Especialistas em aprovação.</p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6">
                     <div class="d-flex my-1">
-                        <img class="info-icon" src="/img/book.png" alt="">
+                        <img class="info-icon" src="/img/1384023.png" alt="">
                         <p class="d-flex align-items-center">Grupo de WhatsApp para dicas e troca de informações (solicitar acesso no numero: 86 9.8136-5984).</p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6">
                     <div class="d-flex my-1">
-                        <img class="info-icon" src="/img/book.png" alt="">
+                        <img class="info-icon" src="/img/2997495.png" alt="">
                         <p class="d-flex align-items-center">Aulas disponíveis até a data da prova.</p>
                     </div>
                 </div>
